force-app/main/default/objects/Customer_Registration_Request__c/Customer_Registration_Request__c.object-meta.xml
<CustomObject>
    <label>Customer Registration Request</label>
    <nameField>
        <displayFormat>C-{00000000}</displayFormat>
        <label>Customer Registration Request Number#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Registration Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>