force-app/main/default/objects/Customer_Registration_Request__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Registration Requests</relationshipLabel>
    <relationshipName>Customer_Registration_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>