force-app/main/default/objects/Customer_Registration_Request__c/fields/Admin_s_Account__c.field-meta.xml
<CustomField>
    <fullName>Admin_s_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Admin&apos;s Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Registration Requests (Admin&apos;s Account)</relationshipLabel>
    <relationshipName>Customer_Registration_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>