force-app/main/default/objects/Customer_Registration_Request__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <label>Comments</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>