force-app/main/default/objects/Customer_Registration_Request__c/fields/Domain_Name__c.field-meta.xml
<CustomField>
    <fullName>Domain_Name__c</fullName>
    <label>Domain Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>