force-app/main/default/objects/Customer_Registration_Request__c/fields/Exception__c.field-meta.xml
<CustomField>
    <fullName>Exception__c</fullName>
    <label>Exception</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>