force-app/main/default/objects/Customer_Registration_Request__c/fields/Extended_By_Date__c.field-meta.xml
<CustomField>
    <fullName>Extended_By_Date__c</fullName>
    <inlineHelpText>When approving temporary access to the Support Portal for use cases with no entitlements, specify a future date to disable access. For example, provide 30 days into the future. Once approved, the system automatically creates an entitlement.</inlineHelpText>
    <label>Future login expiration date</label>
    <type>Date</type>
</CustomField>