force-app/main/default/objects/Customer_Registration_Request__c/fields/has_Account__c.field-meta.xml
<CustomField>
    <fullName>has_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The system successfully matched an Account with the email domain of the registration request.</description>
    <inlineHelpText>The system successfully matched an Account with the email domain of the registration request.</inlineHelpText>
    <label>Account verified</label>
    <type>Checkbox</type>
</CustomField>