force-app/main/default/objects/Customer_Registration_Request__c/fields/has_Domain__c.field-meta.xml
<CustomField>
    <fullName>has_Domain__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The system successfully verified the email domain of the registration request. Essentially, the email domain exists under the specified Account.</description>
    <inlineHelpText>The system successfully verified the email domain of the registration request. Essentially, the email domain exists under the specified Account.</inlineHelpText>
    <label>Email domain verified</label>
    <type>Checkbox</type>
</CustomField>