force-app/main/default/objects/Customer_Registration_Request__c/fields/Login_Expired__c.field-meta.xml
<CustomField>
    <fullName>Login_Expired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Login Expired</label>
    <type>Checkbox</type>
</CustomField>