force-app/main/default/objects/Customer_Registration_Request__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>In progress</fullName>
            </value>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Pending for Approval</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Unknown email domain</fullName>
            </value>
            <value>
                <fullName>Waiting for internal Rubrik</fullName>
            </value>
            <value>
                <fullName>Waiting for registration user</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>