force-app/main/default/objects/Customer_Registration_Request__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <columns>Comments__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Time__c</columns>
    <columns>Account__c</columns>
    <columns>Domain_Name__c</columns>
    <columns>Contact__c</columns>
    <columns>FirstName__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Email__c</columns>
    <columns>Description__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <group>APAC_Support_Team</group>
        <group>Customer_Success_Team</group>
        <group>East_Coast_RTP_Team</group>
        <roleAndSubordinates>APAC_Support_Engineer</roleAndSubordinates>
        <roleAndSubordinates>APAC_Support_Manager</roleAndSubordinates>
        <roleAndSubordinates>Account_Executive_ANZ_FED</roleAndSubordinates>
        <roleAndSubordinates>Account_Executive_FED_Civ</roleAndSubordinates>
        <roleAndSubordinates>Account_Executive_FED_DOD1</roleAndSubordinates>
        <roleAndSubordinates>Account_Executive_France</roleAndSubordinates>
        <roleAndSubordinates>Account_Executive_Germany_1</roleAndSubordinates>
        <roleAndSubordinates>Account_Executive_Intelligence</roleAndSubordinates>
        <roleAndSubordinates>Account_Executive_Italy</roleAndSubordinates>
        <roleAndSubordinates>Account_Executive_JAPAN_1</roleAndSubordinates>
        <roleAndSubordinates>Alliance_Business_Development</roleAndSubordinates>
        <roleAndSubordinates>CEO</roleAndSubordinates>
        <roleAndSubordinates>Channel_Development_Manager</roleAndSubordinates>
        <roleAndSubordinates>Customer_Experience_Engineer_Support_AMS</roleAndSubordinates>
        <roleAndSubordinates>Customer_Experience_Engineer_Support_BLR</roleAndSubordinates>
        <roleAndSubordinates>Customer_Experience_Engineer_Support_Cork</roleAndSubordinates>
        <roleAndSubordinates>Customer_Experience_Engineer_Support_Kansas</roleAndSubordinates>
        <roleAndSubordinates>Customer_Experience_Engineer_Support_PA</roleAndSubordinates>
        <roleAndSubordinates>Customer_Experience_Manager_Support_RTP</roleAndSubordinates>
        <roleAndSubordinates>Customer_Support_Staff_Engineer</roleAndSubordinates>
        <roleAndSubordinates>Director_Customer_Success</roleAndSubordinates>
        <roleAndSubordinates>Director_Customer_Support_RTP</roleAndSubordinates>
        <roleAndSubordinates>Director_of_Service_Provider</roleAndSubordinates>
        <roleAndSubordinates>EMEA_NEUR_SDR</roleAndSubordinates>
        <roleAndSubordinates>ENT_India_AE</roleAndSubordinates>
        <roleAndSubordinates>GVP_EMEA</roleAndSubordinates>
        <roleAndSubordinates>Head_of_Alliances</roleAndSubordinates>
        <roleAndSubordinates>Head_of_America_Sales</roleAndSubordinates>
        <roleAndSubordinates>Head_of_Engineering</roleAndSubordinates>
        <roleAndSubordinates>Head_of_Inside_Sales</roleAndSubordinates>
        <roleAndSubordinates>Head_of_Marketing</roleAndSubordinates>
        <roleAndSubordinates>Head_of_Product_Marketing</roleAndSubordinates>
        <roleAndSubordinates>Head_of_Sales</roleAndSubordinates>
        <roleAndSubordinates>Head_of_Sales_Channel</roleAndSubordinates>
        <roleAndSubordinates>Head_of_Support</roleAndSubordinates>
        <roleAndSubordinates>Head_of_US_FE</roleAndSubordinates>
        <roleAndSubordinates>RD_ENT_India</roleAndSubordinates>
        <roleAndSubordinates>RD_MENA</roleAndSubordinates>
        <roleAndSubordinates>RVP_APAC_JAPAN</roleAndSubordinates>
        <roleAndSubordinates>TVP_APAC</roleAndSubordinates>
        <roleAndSubordinates>US_NCEAST_SDR_Manager</roleAndSubordinates>
        <roleAndSubordinates>US_PS1_Federal_SDR</roleAndSubordinates>
        <roleAndSubordinates>VP_Sales_Federal</roleAndSubordinates>
    </sharedTo>
</ListView>