force-app/main/default/objects/Customer_Registration_Request__c/listViews/All_Registration_Requests_Today.listView-meta.xml
<ListView>
    <fullName>All_Registration_Requests_Today</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Time__c</columns>
    <columns>Status__c</columns>
    <columns>Comments__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Contact__c</columns>
    <columns>Email__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>All Registration Requests (Today)</label>
</ListView>