force-app/main/default/objects/Customer_Registration_Request__c/listViews/Support_Manager_Queue_Customer_Registration_Request.listView-meta.xml
<ListView>
    <fullName>Support_Manager_Queue_Customer_Registration_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>Support Manager Queue</label>
    <queue>Support_Manager_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>